--- a/local.yml
+++ b/local.yml
@@ -6,7 +6,8 @@
   tasks:
   - name: install packages
     package:
-      name: 
+      name:
+        - epel-release 
         - htop
         - tmux
         - vim-nox
