--- a/local.yml
+++ b/local.yml
@@ -20,11 +20,13 @@
       group: root
 
   - name: set wallpaper
+    become_user: berg
     dconf:
       key: "/org/gnome/desktop/background/piture-uri"
       value: "'file:///usr/share/backgrounds/ansible-wallpaper.png'"
 
   - name: set wallpaper position
+    become_user: berg
     dconf:
       key: "/org/gnome/desktop/background/picture-options"
       value: "'zoom'"
