--- a/local.yml
+++ b/local.yml
@@ -15,19 +15,19 @@
 
   - name: copy wallpaper file
     copy:
-      src: files/wallpaper.png
-      dest: /usr/share/background/ansible-wallpaper.png
+      src: files/AlmaLinux.png
+      dest: /usr/share/backgrounds/ansible-wallpaper.png
       owner: root
       group: root
 
   - name: set wallpaper
     become_user: berg
-    dconf:
-      key: "/org/gnome/desktop/background/piture-uri"
+    community.general.dconf:
+      key: "/org/gnome/desktop/background/picture-uri"
       value: "'file:///usr/share/backgrounds/ansible-wallpaper.png'"
 
   - name: set wallpaper position
     become_user: berg
-    dconf:
+    community.general.dconf:
       key: "/org/gnome/desktop/background/picture-options"
       value: "'zoom'"
