--- a/local.yml
+++ b/local.yml
@@ -20,3 +20,14 @@
       owner: root
       group: root
 
+  - name: set wallpaper
+    become_user: berg
+    community.general.dconf:
+      key: "/org/gnome/desktop/background/picture-uri"
+      value: "'file:///usr/share/backgrounds/ansible-wallpaper.jpg'"
+
+  - name: set wallpaper position
+    become_user: berg
+    community.general.dconf:
+      key: "/org/gnome/desktop/background/picture-options"
+      value: "'zoom'"
