--- a/local.yml
+++ b/local.yml
@@ -22,12 +22,12 @@
 
   - name: set wallpaper
     become_user: berg
-    community.general.dconf:
+    dconf:
       key: "/org/gnome/desktop/background/picture-uri"
       value: "'file:///usr/share/backgrounds/ansible-wallpaper.jpg'"
 
   - name: set wallpaper position
     become_user: berg
-    community.general.dconf:
+    dconf:
       key: "/org/gnome/desktop/background/picture-options"
       value: "'zoom'"
