--- a/local.yml
+++ b/local.yml
@@ -16,19 +16,8 @@
 
   - name: copy wallpaper file
     copy:
-      src: files/AlmaLinux.png
-      dest: /usr/share/backgrounds/ansible-wallpaper.png
+      src: files/AlmaLinux.jpg
+      dest: /usr/share/backgrounds/ansible-wallpaper.jpg
       owner: root
       group: root
 
-  - name: set wallpaper
-    become_user: berg
-    community.general.dconf:
-      key: "/org/gnome/desktop/background/picture-uri"
-      value: "'file:///usr/share/backgrounds/ansible-wallpaper.png'"
-
-  - name: set wallpaper position
-    become_user: berg
-    community.general.dconf:
-      key: "/org/gnome/desktop/background/picture-options"
-      value: "'zoom'"
